# Gazebo-map-generate-ROS1

./: .gitignore  README.md  estimate_steps.sh  generate_map.sh
models/desert_mesh/: model.config  model.sdf
models/desert_mesh/materials/scripts/: desert.material
src/gazebo_map_creator/: kongdi.world
src/gazebo_map_creator/gazebo_map_creator/: CMakeLists.txt  package.xml
src/gazebo_map_creator/gazebo_map_creator/scripts/: request_map.py
src/gazebo_map_creator/gazebo_map_creator/src/: gazbeo_map_creator.cpp
src/gazebo_map_creator/gazebo_map_creator_interface/: CMakeLists.txt  package.xml
src/gazebo_map_creator/gazebo_map_creator_interface/srv/: MapRequest.srv
worlds/: desert_mesh.world
